fix undesired wrapping behavior.

--- a/front-end/Assets/src/css/orion/_orion-global.scss
+++ b/front-end/Assets/src/css/orion/_orion-global.scss
@@ -922,14 +922,12 @@
     outline:none; 
     position: relative;
     background-image:url(#{$imagesFolder}orion/info.png);
-    //background-image:url("Assets/src/img/orion/info.png");
     background-repeat: no-repeat;
     background-position: center center;
-    display: inline-block;
-    height:20px;
-    width:20px;
-    margin-left:10px;
-    &:hover {text-decoration:none;} 
+    display: inline;
+	padding: 10px;
+	line-height:20px;
+    &:hover {text-decoration:none;cursor:pointer;} 
     .Tooltip-window {
       z-index:10;
       display:none; 
